feat: add getUser

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "webpack-cli": "^5.1.4"
   },
   "dependencies": {
+    "@types/uuid": "^9.0.8",
     "dotenv": "^16.4.3",
     "nodemon": "^3.0.3",
     "ts-node": "^10.9.2",
