--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node src/index.ts",
-    "build": "webpack --mode=production --node-env=production",
     "build:dev": "webpack --mode=development",
     "build:prod": "webpack --mode=production --node-env=production",
     "watch": "webpack --watch",
-    "start:dev": "nodemon --watch src index.ts"
+    "start:dev": "nodemon --watch src index.ts",
+    "start:prod": "webpack --mode=production --node-env=production && node dist/final.js"
   },
   "keywords": [],
   "author": "",
@@ -30,10 +30,17 @@
   },
   "dependencies": {
     "@types/uuid": "^9.0.8",
+    "crypto-browserify": "^3.12.0",
     "dotenv": "^16.4.3",
+    "events": "^3.3.0",
     "nodemon": "^3.0.3",
+    "os-browserify": "^0.3.0",
+    "path-browserify": "^1.0.1",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
+    "url": "^0.11.3",
     "uuid": "^9.0.1"
   }
 }
