--- a/package.json
+++ b/package.json
@@ -5,12 +5,9 @@
   "main": "index.ts",
   "scripts": {
     "test": "jest",
-    "start": "node src/index.ts",
-    "build:dev": "webpack --mode=development",
     "build:prod": "webpack --mode=production --node-env=production",
-    "watch": "webpack --watch",
     "start:dev": "nodemon --watch src index.ts",
-    "start:prod": "webpack --mode=production --node-env=production && node dist/final.js"
+    "start:prod": "pnpm run build:prod && node dist/final.js"
   },
   "keywords": [],
   "author": "",
