--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "jest",
     "build:prod": "webpack --mode=production --node-env=production",
     "start:dev": "nodemon --watch src index.ts",
-    "start:prod": "pnpm run build:prod && node dist/final.js"
+    "start:prod": "pnpm run build:prod && node dist/final.js",
+		"start:multi": "pnpm run start:dev  --multi"
   },
   "keywords": [],
   "author": "",
@@ -31,7 +32,6 @@
   "dependencies": {
     "@types/uuid": "^9.0.8",
     "dotenv": "^16.4.3",
-    "events": "^3.3.0",
     "jest": "^29.7.0",
     "nodemon": "^3.0.3",
     "supertest": "^6.3.4",
