--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build:prod": "webpack --mode=production --node-env=production",
     "start:dev": "nodemon --watch src index.ts",
     "start:prod": "pnpm run build:prod && node dist/final.js",
-		"start:multi": "pnpm run start:dev  --multi"
+    "start:multi": "pnpm run start:dev  --multi",
+  "speed": "npx tsx src/speedTest.ts"  
   },
   "keywords": [],
   "author": "",
@@ -24,12 +25,14 @@
     "prettier": "^3.2.5",
     "ts-jest": "^29.1.2",
     "ts-loader": "^9.5.1",
+    "tsx": "^4.7.1",
     "typescript": "^5.3.3",
     "webpack": "^5.90.1",
     "webpack-cli": "^5.1.4"
   },
   "dependencies": {
     "@types/uuid": "^9.0.8",
+    "axios": "^1.6.7",
     "dotenv": "^16.4.3",
     "jest": "^29.7.0",
     "nodemon": "^3.0.3",
