--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "module": "NodeNext",
     "target": "es5",
     "allowJs": true
+		// "esModuleInterop": true
   },
   "files": ["src/app.ts"],
 	"exclude": [
